RESOLVED FIXED180178
Missing layer content when animating elements on-screen
https://bugs.webkit.org/show_bug.cgi?id=180178
Summary Missing layer content when animating elements on-screen
Simon Fraser (smfr)
Reported 2017-11-29 17:34:13 PST
Missing layer content when animating elements on-screen
Attachments
Patch (3.79 KB, patch)
2017-11-29 17:37 PST, Simon Fraser (smfr)
dino: review+
Manual test (1.21 KB, text/html)
2017-11-29 17:37 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-11-29 17:37:17 PST
Simon Fraser (smfr)
Comment 2 2017-11-29 17:37:34 PST
Created attachment 327936 [details] Manual test
Simon Fraser (smfr)
Comment 3 2017-11-29 17:37:49 PST
Dean Jackson
Comment 4 2017-11-29 17:41:14 PST
Comment on attachment 327935 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=327935&action=review > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1516 > + bool nowRunningTransformAnimation = wasRunningTransformAnimation; > + if (m_uncommittedChanges & AnimationChanged) > + nowRunningTransformAnimation = isRunningTransformAnimation(); > + > + if (wasRunningTransformAnimation != nowRunningTransformAnimation) > + childCommitState.ancestorStartedOrEndedTransformAnimation = true; I wish all this could be one statement, but I can't think of a better way.
Simon Fraser (smfr)
Comment 5 2017-11-29 17:50:58 PST
Said Abou-Hallawa
Comment 6 2017-11-30 11:00:29 PST
Comment on attachment 327935 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=327935&action=review >> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1516 >> + childCommitState.ancestorStartedOrEndedTransformAnimation = true; > > I wish all this could be one statement, but I can't think of a better way. Maybe if ((m_uncommittedChanges & AnimationChanged) && wasRunningTransformAnimation != isRunningTransformAnimation())
Note You need to log in before you can comment on or make changes to this bug.